fixed some alignments

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Play&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Play&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-*{
-    font-family: 'Play', sans-serif;
+* {
+    font-family: "Play", sans-serif;
 }
 
 @layer components {
@@ -17,12 +17,10 @@
     }
 
     .calculator {
-        @apply grid row-auto md:grid-cols-[repeat(4,_minmax(75px,100px))] grid-cols-[repeat(4,_minmax(50px,80px))] md:m-auto m-[10px] content-center justify-center gap-[10px] transition-all h-[60vh]  ;
+        @apply grid row-auto md:grid-cols-[repeat(4,_minmax(75px,100px))] grid-cols-[repeat(4,_minmax(50px,80px))] md:m-auto m-[10px] content-center justify-center gap-[10px] transition-all h-[60vh];
     }
 
-    .display{
-        @apply col-span-full bg-slate-300 h-[100px] rounded-md flex flex-col items-end justify-between p-[10px] border-black border;
+    .display {
+        @apply col-span-full bg-slate-300 min-h-[120px]  max-h-[400px] rounded-md flex flex-col items-end justify-between p-[10px] border-black border transition-max-height duration-300  ease-in-out;
     }
-
-    
 }
